@@ -1,9 +1,11 @@
 *.swp
 *.o
+*.py
 .pio
 pio_dirs
 examples/*/*.h
 examples/*/*.cpp
+!examples/*/test_*.cpp
 tests/test_[0-9][0-9]
 tests/FastAccelStepper.cpp
 tests/FastAccelStepper.h
